--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
 [egg_info]
-tag_build = dev
-tag_svn_revision = true
+tag_build = 
+tag_svn_revision = false
+
+[pytest]
+addopts = --ignore=setup.py --ignore=build --ignore=dist --doctest-modules
+norecursedirs=*.egg
